gap fix 8

--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,14 @@ nav {
 
 @media screen and (max-width: 767px) {
     /* Reduce the width between buttons */
-    .menu li {
-        margin: 5px auto; /* Adjust the margin as needed */
+    .menu {
+        margin: 0px; /* Adjust the margin as needed */
+        padding: 0;
         font-size: 14px !important; /* Reduce font size */
+    }
+
+    nav {
+        overflow: wrap;
     }
 }
 
@@ -119,17 +124,26 @@ nav {
 
 .menu {
     display: flex;
-    gap: 20px;
-    margin: 0;
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap to the next line */
+    justify-content: space-between; /* Space items evenly along the main axis */
     padding: 0;
+    margin: 0;
+    /*
+    gap: 20px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: 767px) {
         gap: 10px;    
-    }
+    }*/
 }
 
 .menu li {
     position: relative;
+    margin: 5px;
+    text-align: center;
+    @media screen and (max-width: 767px) {
+        flex: 0 0 calc(50% - 10px); /* Two items per row with spacing */
+    }
 }
 
 .menu a {
